[package]
name = "tip-server"
version = "0.1.0"
edition = "2021"
readme = "README.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# typst essentials
typst = "0.11.0"
comemo = "0.4"

# typst rendering (for demonstration purpose)
typst-pdf = "0.11.0"
typst-svg = "0.11.0"

# Fetching and unzipping packages
zune-inflate = { version = "0.2", default_features = false, features = [
    "gzip",
    "std",
] }
tar = "0.4"
ureq = "2.9"

# utils
time = "0.3"
ttf-parser = "0.20"
